# Goldfish

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Doxyfile.in  Goldfish.files  LICENCE  Makefile  Pipfile  README.md  benchmark.py  bitboards.cpp  bitboards.h  calculate-elos  chester-tournament.py  input.txt  lichess-config.yml  makefile  match-history.pgn  match-script.py  match_script.py  move.cpp  move.h  move.h~  movegen.cpp  pieces.h  position.cpp  position.h  testing.cpp  tournament-script.py  types.h
.cargo/: config.toml
.github/workflows/: cargo-build-test-publish.yml  cargo-build-test.yml  ccpp.yml  clippy.yml  release.yml
app/: bench.cpp  goldfish.cpp  perft.cpp  testing.cpp  unittests.cpp
benchmark/: benchmark.py  positions.py
ci/: fetch-tablebase.sh  windows-install-notes.md
cmake/: CodeCoverage.cmake  x86_64-w64-mingw32.cmake
engine/: Cargo.toml
engine/benches/: standard_search_suite_iai.rs
engine/src/: bench.rs  board.rs  chessmove.rs  evaluate.rs  lib.rs  limits.rs  logger.rs  main.rs  movelist.rs  movepicker.rs  newtypes.rs  opts.rs  tt.rs
engine/src/newtypes/: depth.rs  nonmax.rs  ply.rs  value.rs
engine/src/search/: cuts.rs  helpers.rs  mod.rs  negamax.rs  quiescence.rs  root.rs  run.rs  speculate.rs  stackstate.rs
fathom/: Cargo.toml  build.rs
fathom/src/: error.rs  lib.rs  probe.rs  sys.rs
fathom/tests/: test_memory_leak.rs  test_root_probes.rs  test_wdl_probes.rs
goldchess/: Cargo.toml
goldchess-gen/: Cargo.toml
goldchess-gen/src/: lib.rs  main.rs
goldchess/src/: bitboard.rs  castlerights.rs  color.rs  error.rs  file.rs  generated_tables.rs  lib.rs  piece.rs  position.rs  rank.rs  square.rs
goldfish/: Cargo.toml
goldfish/engine/: Cargo.toml
goldfish/engine/benches/: standard_search_suite.rs  standard_search_suite_criterion.rs  standard_search_suite_iai.rs
goldfish/engine/src/: bench.rs  board.rs  evaluate.rs  lib.rs  limits.rs  logger.rs  main.rs  movelist.rs  newtypes.rs  search.rs  stop_signal.rs  tt.rs  value.rs
goldfish/engine/src/newtypes/: depth.rs  value.rs
goldfish/engine/src/search/: cuts.rs  helpers.rs  minmax.rs  mod.rs  negamax.rs  quiescence.rs  root.rs  stackstate.rs
goldfish/engine/src/tablebase/: mod.rs
goldfish/engine/src/tb/: chess_to_fathom.rs  mod.rs  root_moves_filter.rs  root_probe.rs
goldfish/fathom/src/: lib.rs  sys.rs  wdl.rs
goldfish/src/: evaluate.rs  lib.rs  main.rs
goldfish/src/engine/: controller.rs  mod.rs  movelist.rs  search.rs
goldfish/src/uci/: comm.rs  mod.rs  stop_signal.rs  types.rs
goldfish/uci/src/: comm.rs  commands.rs  error.rs  lib.rs  responses.rs  types.rs  uciengine.rs
include/: LRUCache.hpp  benchmark.hpp  bitboard.hpp  bound.hpp  castling.hpp  castlingtype.hpp  color.hpp  depth.hpp  evaluate.h  evaluation.hpp  file.hpp  goldfish.h  goldfish.hpp  move.h  move.hpp  movegen.h  movegenerator.hpp  movelist.hpp  movetype.hpp  notation.hpp  operations.hpp  perft.hpp  piece.hpp  piecetype.hpp  position.h  position.hpp  projectmeta.hpp.in  protocol.hpp  rank.hpp  score.hpp  search.h  search.hpp  square.hpp  stateinfo.h  tb.hpp  tt.hpp  types.h  uci.h  uci.hpp  value.hpp
lichess-bot/: README.md  lichess-config.yml
src/: Cargo.toml  Makefile  benchmark.cpp  bitboard.cpp  bitboards.cpp  castling.cpp  castlingtype.cpp  color.cpp  driver.rs  eval.rs  evaluate.cpp  evaluation.cpp  file.cpp  goldfish.cpp  io.rs  lib.rs  main.rs  move.cpp  move.h  movegen.cpp  movegen.h  movegenerator.cpp  movelist.cpp  notation.cpp  perft.cpp  piece.cpp  piecetype.cpp  position.cpp  position.h  rank.cpp  search.cpp  search.rs  searchmanagement.cpp  semaphore.cpp  square.cpp  stateInfo.cpp  tb.cpp  timer.cpp  tt.cpp  types.h  (+2 more)
src/engine/: Cargo.toml
src/engine/benches/: standard_search_suite_criterion.rs  standard_search_suite_iai.rs
src/engine/src/: bench.rs  chessmove.rs  evaluate.rs  lib.rs  limits.rs  logger.rs  main.rs  movelist.rs  newtypes.rs  opts.rs  tune.rs
src/engine/src/newtypes/: depth.rs  ply.rs  value.rs
src/engine/src/search/: cuts.rs  helpers.rs  mod.rs  negamax.rs  quiescence.rs  root.rs  run.rs  speculate.rs  stackstate.rs
src/eval/: mod.rs  options.rs
src/fathom/: Cargo.toml  build.rs
src/fathom/src/: error.rs  lib.rs
src/fathom/tests/: test_memory_leak.rs  test_root_probes.rs  test_wdl_probes.rs
src/uci/: Cargo.toml
src/uci/src/: comm.rs  commands.rs  lib.rs  uciengine.rs  ucioptions.rs
src/ucibench/: Cargo.toml  bench.json
src/ucibench/src/: main.rs
src/uciderive/: Cargo.toml
src/uciderive/src/: lib.rs
stats/: .gitignore  calculate-elos  duel.sh  head-to-head-history.txt  stockfish-calibration.sh
stats/autotune/: .gitignore  SaintLouis2023.pgn  calculate-elos  chess_tuning_tools-0.9.5-py3-none-any.whl  goldfish-dev  pyproject.toml  tune.json
stats/autotune/ucituner/: config.py  cutechess.py  plots.py
stats/nodebench/: bench.json  bench.py  tune.json  tune.py
syzygy/: .gitignore  5-man-checksums.md5  README.md  download.sh  links.txt  verify_checksums.py
tests/: bitboardtest.cpp  castlingtest.cpp  castlingtypetest.cpp  colortest.cpp  evaluate.cpp  evaluationtest.cpp  extratest.cpp  filetest.cpp  move.cpp  movegeneratortest.cpp  movelisttest.cpp  movetest.cpp  notationtest.cpp  perft.cpp  piecetest.cpp  piecetypetest.cpp  position.cpp  positiontest.cpp  ranktest.cpp  squaretest.cpp  stateinfo.cpp  tbtest.cpp  test_debug.rs  test_search.py  test_win_at_chess.py  tt.cpp  types.cpp  ucioptions.cpp  unittests.cpp
uci/: Cargo.toml
uci/src/: commands.rs  lib.rs  opts.rs  responses.rs
uciderive/: Cargo.toml
uciderive/src/: lib.rs
