[package]
name = "engine"
version = "2.0.0"
edition = "2021"
description = """\
Goldfish - A UCI chess engine.
"""
authors = ["Bendik Samseth <b.samseth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
chess = "3.2.0"
derive_more = "0.99.17"
fathom-syzygy = "0.1.0"
static_assertions = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "default",
  "env-filter",
] }
uci = { path = "../uci" }

[dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"

[[bench]]
name = "standard_search_suite_criterion"
harness = false

[[bench]]
name = "standard_search_suite_iai"
harness = false
