[package]
name = "ucibench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
itertools = "0.12.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
