[package]
name = "uciderive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
darling = "0.20.9"
